<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".appActivites.saleActivities.ToOrderActivity">

    <Button
        android:id="@+id/paymentBtn"
        android:layout_width="180dp"
        android:layout_height="53dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif"
        android:text="Payment"
        android:textSize="8pt"
        app:layout_constraintBottom_toTopOf="@+id/reportText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postCodeInput" />

    <EditText
        android:id="@+id/cityInput"
        android:layout_width="177dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="100dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="City"
        android:inputType="textPersonName"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@+id/reportText"
        app:layout_constraintEnd_toStartOf="@+id/postCodeInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstLineAddressInput" />

    <EditText
        android:id="@+id/postCodeInput"
        android:layout_width="158dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="Postcode"
        android:inputType="number"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@+id/paymentBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cityInput"
        app:layout_constraintTop_toBottomOf="@+id/firstLineAddressInput" />

    <EditText
        android:id="@+id/firstLineAddressInput"
        android:layout_width="373dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="Street, nr"
        android:inputType="textPersonName"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@+id/cityInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shippingAddressText" />

    <TextView
        android:id="@+id/personalDataText"
        android:layout_width="195dp"
        android:layout_height="31dp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif"
        android:text="Personal Data"
        android:textSize="7pt"
        app:layout_constraintBottom_toTopOf="@+id/firstnameInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52" />

    <EditText
        android:id="@+id/firstnameInput"
        android:layout_width="174dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="Firstname"
        android:inputType="textPersonName"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@+id/emailInput"
        app:layout_constraintEnd_toStartOf="@+id/surnameInput"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personalDataText" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="373dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="Email"
        android:inputType="textPersonName"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@+id/shippingAddressText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstnameInput" />

    <EditText
        android:id="@+id/surnameInput"
        android:layout_width="166dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="Surname"
        android:inputType="textPersonName"
        android:textSize="10pt"
        app:layout_constraintBottom_toTopOf="@+id/emailInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/firstnameInput"
        app:layout_constraintTop_toBottomOf="@+id/personalDataText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/shippingAddressText"
        android:layout_width="195dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="200dp"
        android:fontFamily="sans-serif"
        android:text="Shipping Address"
        android:textSize="7pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/firstLineAddressInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />

    <TextView
        android:id="@+id/reportText"
        android:layout_width="368dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif"
        android:textAlignment="center"
        android:textColor="@color/Red"
        android:textSize="7pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>