...
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif"
        android:textColor="@color/LimeGreen"
        android:textSize="9pt"
        app:layout_constraintBottom_toTopOf="@+id/checkStatusBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderIdFeld_checkStatus" />

    <EditText
        android:id="@+id/orderIdFeld_checkStatus"
        android:layout_width="360dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
...
